[gd_scene load_steps=3 format=2]

[ext_resource path="res://src/boot/DriverContainer.gd" type="Script" id=1]

[sub_resource type="StyleBoxFlat" id=1]
draw_center = false
border_width_top = 2
border_width_bottom = 2

[node name="DriverContainer" type="PanelContainer"]
margin_top = 300.0
margin_right = 494.0
margin_bottom = 396.0
rect_min_size = Vector2( 0, 96 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HB" type="HBoxContainer" parent="."]
margin_top = 2.0
margin_right = 494.0
margin_bottom = 94.0
alignment = 1

[node name="VB" type="VBoxContainer" parent="HB"]
margin_right = 326.0
margin_bottom = 92.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
custom_constants/separation = 12
alignment = 1

[node name="NameLabel" type="Label" parent="HB/VB"]
margin_top = 13.0
margin_right = 326.0
margin_bottom = 27.0
text = "Barracuda"
align = 1

[node name="DescriptionLabel" type="Label" parent="HB/VB"]
margin_top = 39.0
margin_right = 326.0
margin_bottom = 53.0
text = "High-Fidelity Graphics Driver"
align = 1
autowrap = true

[node name="VersionLabel" type="Label" parent="HB/VB"]
margin_top = 65.0
margin_right = 326.0
margin_bottom = 79.0
text = "Version:"
align = 1

[node name="SettingsButton" type="Button" parent="HB"]
margin_left = 348.0
margin_top = 36.0
margin_right = 476.0
margin_bottom = 56.0
rect_min_size = Vector2( 128, 0 )
size_flags_horizontal = 6
size_flags_vertical = 4
text = "Settings"
